fix: #1766 Generated swag and api, fixed PracticeMaterialDAL and TheoryMaterialDAL
