# mw-webapp/src/apiAutogenerated/training/apis/TheoryMaterialApi.ts
@@ -32,7 +32,6 @@ import {
 } from '../models/index';
 
 export interface CreateTheoryMaterialRequest {
-    topicId: string;
     request: MwTrainingBffInternalSchemasCreateTheoryMaterialPayload;
 }
 
@@ -45,7 +44,6 @@ export interface GetTheoryMaterialsByTopicIdRequest {
 }
 
 export interface UpdateTheoryMaterialRequest {
-    theoryMaterialId: string;
     request: MwTrainingBffInternalSchemasUpdateTheoryMaterialPayload;
 }
 
@@ -58,10 +56,6 @@ export class TheoryMaterialApi extends runtime.BaseAPI {
      * Create theory material
      */
     async createTheoryMaterialRaw(requestParameters: CreateTheoryMaterialRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<MwTrainingBffInternalSchemasTheoryMaterial>> {
-        if (requestParameters.topicId === null || requestParameters.topicId === undefined) {
-            throw new runtime.RequiredError('topicId','Required parameter requestParameters.topicId was null or undefined when calling createTheoryMaterial.');
-        }
-
         if (requestParameters.request === null || requestParameters.request === undefined) {
             throw new runtime.RequiredError('request','Required parameter requestParameters.request was null or undefined when calling createTheoryMaterial.');
         }
@@ -73,7 +67,7 @@ export class TheoryMaterialApi extends runtime.BaseAPI {
         headerParameters['Content-Type'] = 'application/json';
 
         const response = await this.request({
-            path: `/theoryMaterials/{topicId}`.replace(`{${"topicId"}}`, encodeURIComponent(String(requestParameters.topicId))),
+            path: `/theoryMaterials`,
             method: 'POST',
             headers: headerParameters,
             query: queryParameters,
@@ -154,10 +148,6 @@ export class TheoryMaterialApi extends runtime.BaseAPI {
      * Update theory material
      */
     async updateTheoryMaterialRaw(requestParameters: UpdateTheoryMaterialRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<MwTrainingBffInternalSchemasTheoryMaterial>> {
-        if (requestParameters.theoryMaterialId === null || requestParameters.theoryMaterialId === undefined) {
-            throw new runtime.RequiredError('theoryMaterialId','Required parameter requestParameters.theoryMaterialId was null or undefined when calling updateTheoryMaterial.');
-        }
-
         if (requestParameters.request === null || requestParameters.request === undefined) {
             throw new runtime.RequiredError('request','Required parameter requestParameters.request was null or undefined when calling updateTheoryMaterial.');
         }
@@ -169,7 +159,7 @@ export class TheoryMaterialApi extends runtime.BaseAPI {
         headerParameters['Content-Type'] = 'application/json';
 
         const response = await this.request({
-            path: `/theoryMaterials/{theoryMaterialId}`.replace(`{${"theoryMaterialId"}}`, encodeURIComponent(String(requestParameters.theoryMaterialId))),
+            path: `/theoryMaterials`,
             method: 'PATCH',
             headers: headerParameters,
             query: queryParameters,
